# finsight

./: .gitignore  CLAUDE.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: graph.py  llm.py  nodes.py  prompts.py  state.py
backend/app/mcp/: client.py  server.py
backend/app/mcp/tools/: company.py  financials.py  metrics.py  price.py
backend/app/routes/: chat.py
backend/tests/: test_mcp_tools.py
docs/: architecture.md  claude-guide.md  decisions.md  repository-structure.md  roadmap.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx
frontend/components/: ChatContainer.tsx  InputBar.tsx  MessageBubble.tsx  MessageList.tsx
frontend/lib/: api.ts
